correct a few spacing issues on v index and profile page

--- a/public/stylesheets/components/_figures.scss
+++ b/public/stylesheets/components/_figures.scss
@@ -93,7 +93,8 @@ input:-webkit-autofill {
 	width: 30%;
 }
 .step-container-header{
-	margin-bottom: 20px;
+	margin-bottom: 70px;
+	font-size: 64px;
 }
 .background-banner-image{
 	background: url(../../assets/heading-background.png) no-repeat center center;
